<?xml version="1.0" encoding="utf-8"?>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".SgPantalla">



        <TextView
            android:id="@+id/tvconfirmar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:text="@string/confirmar"
            android:textSize="30dp">

        </TextView>
        <LinearLayout
            android:id="@+id/lydatos"
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:layout_marginLeft="30dp"
            android:layout_below="@+id/tvconfirmar"
            android:orientation="vertical"
            >
            <TextView
                android:id="@+id/tvdato1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/dato1"
                android:textSize="15dp">

            </TextView>

            <LinearLayout
                android:id="@+id/lyfecha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <TextView
                    android:id="@+id/tvfechanac"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="Fecha de Nacimiento"

                    android:textSize="15dp">

                </TextView>

                <TextView
                    android:id="@+id/tvdato2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="10dp"
                    android:text="@string/dato2"
                    android:textSize="15dp">

                </TextView>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/lytelef"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <TextView
                    android:id="@+id/tvtel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="Tel."
                    android:textSize="15dp">

                </TextView>
                <TextView
                    android:id="@+id/tvdato3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="10dp"
                    android:text="@string/dato3"
                    android:textSize="15dp">

                </TextView>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/lyemail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <TextView
                    android:id="@+id/tvemail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="Email"
                    android:textSize="15dp">

                </TextView>
                <TextView
                    android:id="@+id/tvdato4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="10dp"
                    android:text="@string/dato4"
                    android:textSize="15dp">

                </TextView>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/lydescr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <TextView
                    android:id="@+id/tvdescrip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="Descripción :"
                    android:textSize="15dp">

                </TextView>
                <TextView
                    android:id="@+id/tvdato5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="10dp"
                    android:text="@string/dato5"
                    android:textSize="15dp">

                </TextView>
            </LinearLayout>
        </LinearLayout>


        <Button
            android:id="@+id/btedit"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/lydatos"
            android:text="@string/editar"
            android:layout_centerHorizontal="true">

        </Button>
    </RelativeLayout>